# libsodium-cmake

./: CMakeLists.txt  LICENSE
